kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kb-deployment
  labels:
    app: kanboard
spec:
  replicas: 6
  selector:
    matchLabels:
      app: kanboard
  template:
    metadata:
      labels:
        app: kanboard
    spec:
      containers:
        - name: kb-pod
          image: 228802243251.dkr.ecr.us-east-2.amazonaws.com/main_repo:v1.0.4
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: ecr-registry-creds
