kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kb-service
spec:
  type: LoadBalancer
  selector:
    app: kanboard
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
