kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kb-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - host: kanboard-test-dns.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kb-service
                port:
                  number: 80
